Styling changes to the weather containers/cards but still can't get them to align correctly on the page

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
 }
 
-body h1 {
+h1 {
     background-color: rgb(74, 1, 110);
     margin: 0;
     padding: 0;
@@ -14,6 +14,17 @@ body h1 {
     font-size: 50px;
     font-weight: bold;
     /* figure out how to make the background color be ombre */
+}
+
+.container {
+    display: flex;
+    padding: 20px;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
 }
 
 form {
@@ -85,3 +96,42 @@ button:hover {
     color: black;
     text-decoration: none;
 }
+
+.current-weather-card {
+    text-align: center;
+    flex-grow: 1;
+    border: 3px solid rgb(126, 80, 149);
+    border-radius: 8px;
+    padding: 20px;
+    margin: 10px;
+    max-width: fit-content;
+    justify-content: left;
+
+}
+
+#current-weather {
+    display: block;
+    flex-wrap: wrap;
+}
+
+#forecast {
+    display: inline-block;
+    flex-wrap: wrap;
+}
+
+.forecast-card {
+    display: flex;
+    flex-wrap: wrap;
+    background-color:rgb(126, 80, 149);
+    color: white;
+    font: Arial;
+    font-weight: bold;
+    justify-content: left;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 10px;
+    width: 200px;
+    text-align: left;
+}
+
